# CudaJetsonTx1

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  vectorAdd.cu  vectoradd.h  worker.cpp  worker.h
